# template-agent

./: .env.example  .gitignore  Containerfile  pyproject.toml  request.json  request_ast_multi.json  request_d5_error.json  request_d5_quality.json  request_delete_attempt.json  request_describe.json  request_rt_drop.json  request_rt_multi.json  request_rt_select.json  request_sql.json  request_tables.json  request_tables_public.json  snowflake-bot-buildconfig.yaml  snowflake-bot-config.yaml  snowflake-bot.yaml
deployment/openshift/: configmap.yaml  deployment.yaml  secret.yaml
template_agent/src/: settings.py
template_agent/src/core/: agent.py  manager.py  prompt.py
template_agent/src/core/tools/: __init__.py  snowflake_tools.py
template_agent/src/routes/: health.py  stream.py
tests/: test_prompt.py  test_snowflake_tools.py
